# folders-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: manage.py
src/folder_api/: asgi.py  settings.py  urls.py  wsgi.py
src/groups/: exceptions.py  grouping.py  models.py  serializers.py  urls.py  views.py
src/groups/management/commands/: process_words.py
src/groups/migrations/: 0001_initial.py
src/groups/services/: folders.py  word_groups.py  words.py  words_processing.py
tests/: conftest.py
tests/test_grouping/: test_make_groups.py  test_prepare_structure.py  test_process_node.py  test_process_structure.py
tests/test_views/: test_folder_view.py  test_word_group_view.py  test_word_view.py
